--- a/src/app/components/lecciones/lecciones.component.html
+++ b/src/app/components/lecciones/lecciones.component.html
@@ -12,4 +12,7 @@
       </a>
     </div>
   </div>
+
+  <!-- Botón de Volver al Inicio -->
+  <button [routerLink]="'/'" class="back-btn">← Volver al Inicio</button>
 </div>
